crates/patok-tui/tests/snapshots/ui__running_with_streamed_output.snap
---
source: crates/patok-tui/tests/ui.rs
expression: "draw(&app, 80, 14)"
---
            ┌ Builder ────────────────────────────────────────────────── 00:00 ┐
[ Research ]│Then write the parser.                                            │
      ↓     │▸ Read src/lib.rs                                                 │
[   Plan   ]│  ↳ pub mod task;                                                 │
      ↓     │ ↑↓ scroll · PgUp/PgDn page · End follow · Tab tasks              │
[  Build   ]└──────────────────────────────────────────────────────────────────┘
      ↓     ┌ Tasks | 1/3 - 2 left ────────────────────────────────────────────┐
[  Review  ]│✔ T1.1  scaffold the workspace                                    │
            │▶ T1.2  add the parser for task files                             │
[ Discover ]│○ T1.3  wire the engine to the shell                              │
            │                                                                  │
            │                                                                  │
            └──────────────────────────────────────────────────────────────────┘
 RUNNING  sprint                                       [ Esc ] stop  [ m ] menu
