crates/patok-tui/tests/snapshots/ui__soft_stop_pending_status.snap
---
source: crates/patok-tui/tests/ui.rs
expression: "draw(&app, 80, 14)"
---
            ┌ Builder ────────────────────────────────────────────────── 00:00 ┐
[ Research ]│── T1.2: add the parser for task files                            │
      ↓     │                                                                  │
[   Plan   ]│                                                                  │
      ↓     │ ↑↓ scroll · PgUp/PgDn page · End follow · Tab tasks              │
[  Build   ]└──────────────────────────────────────────────────────────────────┘
      ↓     ┌ Tasks | 1/3 - 2 left ────────────────────────────────────────────┐
[  Review  ]│✔ T1.1  scaffold the workspace                                    │
            │▶ T1.2  add the parser for task files                             │
[ Discover ]│○ T1.3  wire the engine to the shell                              │
            │                                                                  │
            │                                                                  │
            └──────────────────────────────────────────────────────────────────┘
 STOPPING  sprint  Soft stop requested -- the build stops after the current task
