crates/patok-tui/tests/snapshots/ui__thinking_renders_as_markdown.snap
---
source: crates/patok-tui/tests/ui.rs
expression: screen
---
            ┌ Builder ────────────────────────────────────────────────── 00:00 ┐
[ Research ]│── T1.2: add the parser for task files                            │
      ↓     │Plan                                                              │
[   Plan   ]│Read the task parser, then:                                       │
      ↓     │- parse the task lines                                            │
[  Build   ]│- fix the task.rs fixture                                         │
      ↓     │- run cargo test                                                  │
[  Review  ]│Finally:                                                          │
            │  let tasks = parse(&text);                                       │
[ Discover ]│                                                                  │
            │                                                                  │
            │                                                                  │
            │                                                                  │
            │                                                                  │
            │ ↑↓ scroll · PgUp/PgDn page · End follow · Tab tasks              │
            └──────────────────────────────────────────────────────────────────┘
            ┌ Tasks | 1/3 - 2 left ────────────────────────────────────────────┐
            │✔ T1.1  scaffold the workspace                                    │
            │▶ T1.2  add the parser for task files                             │
            │○ T1.3  wire the engine to the shell                              │
            │                                                                  │
            │                                                                  │
            └──────────────────────────────────────────────────────────────────┘
 RUNNING  sprint                                                        m  menu
