crates/patok-tui/tests/snapshots/ui__thinking_renders_the_same_regardless_of_provider.snap
---
source: crates/patok-tui/tests/ui.rs
expression: claude_screen
---
             ┌ Builder ───────────────────────────────────────────────── 00:00 ┐
[ Research  ]│Finally:                                                         │
      ↓      │  let tasks = parse(&text);                                      │
[   Plan    ]│                                                                 │
      ↓      │ ↑↓ scroll · PgUp/PgDn page · End follow · Tab tasks             │
[   Build   ]└─────────────────────────────────────────────────────────────────┘
      ↓      ┌ Tasks | 1/3 - 2 left ───────────────────────────────────────────┐
[  Review   ]│✔ T1.1  scaffold the workspace                                   │
             │○ T1.2  add the parser for task files                            │
[   Ship    ]│○ T1.3  wire the engine to the shell                             │
[ Discover  ]│                                                                 │
[ Learnings ]│                                                                 │
             └─────────────────────────────────────────────────────────────────┘
 RUNNING  sprint     Esc  stop build  ?  settings  t  theme  d  detach  q  quit
